@@ -7,6 +7,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class UsuarioServiceImpl implements UsuarioService {
@@ -16,19 +17,29 @@ public class UsuarioServiceImpl implements UsuarioService {
 
     @Override
     public List<UsuarioDTO> getAllUsuarios() {
-        List<Usuario> usuarios = usuarioRepository.findAll();
-        return usuarios.stream().map(this::convertToDTO).toList();
+        // Convertir la lista de entidades Usuario a DTO
+        return usuarioRepository.findAll().stream()
+                .map(UsuarioDTO::fromEntity) // Convierte cada Usuario a UsuarioDTO
+                .collect(Collectors.toList());
     }
 
     @Override
     public Optional<UsuarioDTO> getUsuarioById(Long id) {
-        return usuarioRepository.findById(id).map(this::convertToDTO);
+        return usuarioRepository.findById(id)
+                .map(UsuarioDTO::fromEntity); // Convierte el Usuario a UsuarioDTO si está presente
     }
 
     @Override
     public UsuarioDTO createUsuario(UsuarioDTO usuarioDTO) {
-        Usuario usuario = convertToEntity(usuarioDTO);
-        return convertToDTO(usuarioRepository.save(usuario));
+        // Convertir UsuarioDTO a Usuario (la lógica inversa puede ser necesaria aquí)
+        Usuario usuario = new Usuario();
+        usuario.setUsername(usuarioDTO.getUsername());
+        usuario.setNombre(usuarioDTO.getNombreCompleto().split(" ")[0]); // Asumir que el primer nombre es el nombre
+        usuario.setApellido(usuarioDTO.getNombreCompleto().split(" ")[1]); // Asumir que el segundo nombre es el apellido
+        usuario.setEmail(usuarioDTO.getEmail());
+        // Establecer otros campos
+        Usuario savedUsuario = usuarioRepository.save(usuario);
+        return UsuarioDTO.fromEntity(savedUsuario);
     }
 
     @Override
